unpackaged/main/default/objects/dfsle__Recipient__c/dfsle__Recipient__c.object-meta.xml
<CustomObject>
    <description>DocuSign Envelope Recipient</description>
    <label>DocuSign Envelope Recipient</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>