unpackaged/main/default/objects/dfsle__Recipient__c/fields/dfsle__Email__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Email__c</fullName>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>