unpackaged/main/default/objects/dfsle__Recipient__c/fields/dfsle__EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>dfsle__EmailMessage__c</fullName>
    <label>Email Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>