unpackaged/main/default/objects/dfsle__Recipient__c/fields/dfsle__EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>dfsle__EmailSubject__c</fullName>
    <label>Email Subject</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>