unpackaged/main/default/objects/dfsle__Recipient__c/fields/dfsle__Envelope__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Envelope__c</fullName>
    <description>DocuSign Envelope</description>
    <inlineHelpText>DocuSign Envelope</inlineHelpText>
    <label>DocuSign Envelope</label>
    <referenceTo>dfsle__Envelope__c</referenceTo>
    <relationshipLabel>DocuSign Envelope Recipients</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>