unpackaged/main/default/objects/dfsle__Recipient__c/fields/dfsle__IdCheckRequired__c.field-meta.xml
<CustomField>
    <fullName>dfsle__IdCheckRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>$ID Check</description>
    <label>ID Check Required</label>
    <type>Checkbox</type>
</CustomField>