unpackaged/main/default/objects/dfsle__Recipient__c/fields/dfsle__Note__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Note__c</fullName>
    <description>Note</description>
    <label>Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>