unpackaged/main/default/objects/dfsle__Recipient__c/fields/dfsle__RoleValue__c.field-meta.xml
<CustomField>
    <fullName>dfsle__RoleValue__c</fullName>
    <label>Role Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>