unpackaged/main/default/objects/dfsle__Recipient__c/fields/dfsle__SmsPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SmsPhoneNumber__c</fullName>
    <label>SMS Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>